[tool.poetry]
name = "code-challenge"
version = "0.1.0"
description = ""
authors = ["zebedeeslewis <zebedee.lewis-ext@relayr.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
